14_12_2020 Spring Boot - Spring Boot Dev Tools and Spring Boot Actuator Spring Boot Actuator - Accessing Actuator Endpoints

--- a/springboot-demo-project/src/main/resources/application.properties
+++ b/springboot-demo-project/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+info.app.name=Springboot Demo App
+info.app.description=My first Springboot app!
+info.app.version=1.0.0
+# Use wildcard "*" to expose all endpoints
+# Can also expose individual endpoints with a comma-delimited list
+management.endpoints.web.exposure.include=*
