--- a/springboot-demo-project/src/main/resources/application.properties
+++ b/springboot-demo-project/src/main/resources/application.properties
@@ -4,3 +4,5 @@ info.app.version=1.0.0
 # Use wildcard "*" to expose all endpoints
 # Can also expose individual endpoints with a comma-delimited list
 management.endpoints.web.exposure.include=*
+# Exclude individual endpoints with a comma-delimited list
+management.endpoints.web.exposure.exclude=health,info
