--- a/springboot-demo-project/src/main/resources/application.properties
+++ b/springboot-demo-project/src/main/resources/application.properties
@@ -5,4 +5,7 @@ info.app.version=1.0.0
 # Can also expose individual endpoints with a comma-delimited list
 management.endpoints.web.exposure.include=*
 # Exclude individual endpoints with a comma-delimited list
-management.endpoints.web.exposure.exclude=health,info
+# management.endpoints.web.exposure.exclude=health,info
+# Define my properties
+coach.name=Mike Tyson
+team.name=The Boxing Club
