15_12_2020 Spring Boot - Application Properties Spring Boot - Configuring the Spring Boot Server

--- a/springboot-demo-project/src/main/resources/application.properties
+++ b/springboot-demo-project/src/main/resources/application.properties
@@ -9,3 +9,8 @@ management.endpoints.web.exposure.include=*
 # Define my properties
 coach.name=Mike Tyson
 team.name=The Boxing Club
+# Change Spring Boot embedded server port
+server.port=7070
+# Set the context path of the application
+# All requests should be prefixed with /myapp
+server.servlet.context-path=/myapp
